# SchemaLens

./: .gitignore  CHANGELOG.md  README.md
schemalens/apps/api/: Dockerfile  pyproject.toml
schemalens/apps/api/app/: crud.py  main.py  models.py
schemalens/apps/api/app/recommendation_engine/: __init__.py  engine.py
schemalens/apps/web/: index.html  package-lock.json  package.json
schemalens/apps/web/src/: layout_handler.jsx  main.jsx  styles.css
schemalens/apps/web/src/components/: ErdEdge.jsx  ErdNode.jsx  TopBar.jsx
schemalens/infra/: docker-compose.yml
